添加离心泵字段
